   GCC 4.8, and IBM XL C.
 * Include missing build script FindSASL2.cmake in distribution tarball
 * Bugs and typos in tutorial examples

Thanks to everyone who contributed to this version of libmongoc.

 * A. Jesse Jiryu Davis
 * Hannes Magnusson
 * Kyle Suarez
 * Jose Sebastian Battig
 * Jeremy Mikola
 * Iago Rubio
 * Matt Cotter
 * alexeyvo

Peace,

  A. Jesse Jiryu Davis


mongo-c-driver 1.2.1
====================

It is my pleasure to announce to you the MongoDB C driver 1.2.1.

This release includes critical bugfixes for SSL connections with
mongoc_client_pool_t, and for Unix domain socket connections.

The documentation is updated for a change introduced in version 1.2.0:
mongoc_client_set_ssl_opts and mongoc_client_pool_set_ssl_opts now configure
the driver to require an SSL connection to the server, even if "ssl=true" is
omitted from the MongoDB URI. Before, SSL options were ignored unless
"ssl=true" was included in the URI.

The build instructions are improved, including the steps to build with OpenSSL
on OS X El Capitan. Build errors and warnings are fixed for clang in gnu99
mode and MinGW.

Thanks to everyone who contributed to this version of libmongoc.

 * A. Jesse Jiryu Davis
 * Hannes Magnusson
 * Tamas Nagy

Peace,

  A. Jesse Jiryu Davis


mongo-c-driver 1.2.0
====================

It is my pleasure to announce to you the MongoDB C driver 1.2.0.

This is a stable release with additive ABI changes and bugfixes. It is
compatible with MongoDB version 2.4 and later.

The following notes summarize changes since the previous stable release,
1.1.11, including changes in the 1.2.0 betas and release candidate.

This version rewrites mongoc_client_t's internals to match two important new
specs for MongoDB drivers: the Server Discovery And Monitoring Spec and the
Server Selection Spec. The rewritten client has many advantages:

 * All replica set members or mongos servers are discovered and periodically