@@ -98,6 +98,8 @@ typedef enum
    MONGOC_ERROR_SERVER_SELECTION_FAILURE,
    MONGOC_ERROR_SERVER_SELECTION_INVALID_ID,
 
+   MONGOC_ERROR_GRIDFS_CHUNK_MISSING,
+
    /* Dup with query failure. */
    MONGOC_ERROR_PROTOCOL_ERROR = 17,
 } mongoc_error_code_t;
